@@ -13,6 +13,8 @@ const il = require('@arangodb/util').inline;
 // Regular expressions for joi patterns
 const RE_EMPTY = /^$/;
 const RE_NOT_EMPTY = /./;
+const RE_KEY = /^[_$a-z][-_$a-z0-9]*$/i;
+const RE_PKG = /^@[_$a-z][-_$a-z0-9]*(\/[_$a-z][-_$a-z0-9]*)*$/i;
 
 const legacyManifestFields = [
   'assets',
@@ -165,11 +167,10 @@ function checkManifest (filename, inputManifest, mount, complainAboutVersionMism
     const value = inputManifest[key];
     const result = joi.validate(value, schema);
     if (result.error) {
-      const error = result.error.message.replace(/^"value"/, `Value`);
+      const error = result.error.message.replace(/^"value"/, 'Value');
       errors.push(il`
         Service at "${mount}" specifies manifest field "${key}"
-        with invalid value "${util.format(value)}":
-        ${error}
+        with invalid value "${util.format(value)}": ${error}
       `);
     } else {
       manifest[key] = result.value;
@@ -231,7 +232,15 @@ function checkManifest (filename, inputManifest, mount, complainAboutVersionMism
         manifest.provides[tokens[0]] = tokens[1] || '*';
       }
     }
+
     for (const name of Object.keys(manifest.provides)) {
+      if (!name.match(RE_KEY) && !name.match(RE_PKG)) {
+        console.warnLines(il`
+          Service at "${mount}" specifies manifest field "provides"
+          with invalid key "${name}" which will no longer be supported in ArangoDB 4.
+        `);
+      }
+
       const version = manifest.provides[name];
       if (!semver.valid(version)) {
         errors.push(il`
@@ -242,8 +251,26 @@ function checkManifest (filename, inputManifest, mount, complainAboutVersionMism
     }
   }
 
+  if (manifest.configuration) {
+    for (const key of Object.keys(manifest.configuration)) {
+      if (!key.match(RE_KEY)) {
+        console.warnLines(il`
+          Service at "${mount}" specifies manifest field "configuration"
+          with invalid key "${key}" which will no longer be supported in ArangoDB 4.
+        `);
+      }
+    }
+  }
+
   if (manifest.dependencies) {
     for (const key of Object.keys(manifest.dependencies)) {
+      if (!key.match(RE_KEY)) {
+        console.warnLines(il`
+          Service at "${mount}" specifies manifest field "dependencies"
+          with invalid key "${key}" which will no longer be supported in ArangoDB 4.
+        `);
+      }
+
       if (typeof manifest.dependencies[key] === 'string') {
         const tokens = manifest.dependencies[key].split(':');
         manifest.dependencies[key] = {
@@ -252,11 +279,21 @@ function checkManifest (filename, inputManifest, mount, complainAboutVersionMism
           required: true
         };
       }
+
+      const name = manifest.dependencies[key].name;
+      if (name !== '*' && !name.match(RE_KEY) && !name.match(RE_PKG)) {
+        console.warnLines(il`
+          Service at "${mount}" specifies manifest field "dependencies"
+          with "${key}" set to invalid name "${name}"
+          which will no longer be supported in ArangoDB 4.
+        `);
+      }
+
       const version = manifest.dependencies[key].version;
       if (!semver.validRange(version)) {
         errors.push(il`
           Service at "${mount}" specifies manifest field "dependencies"
-          with "${key}" set to invalid value "${version}".
+          with "${key}" set to invalid version "${version}".
         `);
       }
     }
